--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -12,7 +12,7 @@
           mat-flat-button
           class='ml-3'
           color='primary' type='submit'>
-          Save
+          {{opType === opTypeEnum.CREATE ? (constantDataService.BUTTON_NAME.SAVE | titlecase) : (constantDataService.BUTTON_NAME.UPDATE | titlecase)}}
         </button>
       </div>
     </div>
@@ -69,6 +69,7 @@
                               <div class='d-flex align-items-center'>
                                 <hidden-innovation-common-form-field-video
                                   controlPath='videoId'
+                                  [videoData]='selectedTest?.video'
                                   [parentCtrl]='testGroup.controls.videoId'
                                   (emitVideoCtrlData)='testGroup.controls.videoId?.setValue($event)'
                                   (emitRemoveVideo)='testGroup.controls.videoId?.reset($event)'
@@ -90,6 +91,7 @@
                               <p class='text-muted mb-2'>Thumbnail</p>
                               <hidden-innovation-common-form-field-image
                                 controlPath='thumbnailId'
+                                [setImageData]='selectedTest?.thumbnail'
                                 [aspectRatio]='aspectRatio.STANDARD'
                                 [parentCtrl]='testGroup.controls.thumbnailId'
                                 (emitImageCtrlData)='testGroup.controls.thumbnailId?.setValue($event)'
@@ -102,6 +104,7 @@
                               <p class='text-muted mb-2'>Poster</p>
                               <hidden-innovation-common-form-field-image
                                 controlPath='posterId'
+                                [setImageData]='selectedTest?.poster'
                                 [aspectRatio]='aspectRatio.CUBE'
                                 [parentCtrl]='testGroup.controls.posterId'
                                 (emitImageCtrlData)='testGroup.controls.posterId?.setValue($event)'
@@ -250,7 +253,8 @@
                             <div class='col-12'>
                               <mat-form-field class='w-100'>
                                 <mat-label>Input Type</mat-label>
-                                <mat-select formControlName='inputType'>                                  <mat-option value='NONE'>None</mat-option>
+                                <mat-select formControlName='inputType'>
+                                  <mat-option value='NONE'>None</mat-option>
                                   <mat-option value='NONE'>None</mat-option>
                                   <mat-option *ngFor='let type of testInputTypeIte'
                                               [value]='type'>{{type | replaceUnderscore | titlecase}}</mat-option>
