--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -1,4 +1,4 @@
-<form class='p-4'>
+<form class='p-4' [formGroup]='testGroup'>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
@@ -9,6 +9,7 @@
           Cancel
         </button>
         <button
+          (click)='submit()'
           mat-flat-button
           class='ml-3'
           color='primary' type='submit'>
@@ -32,30 +33,77 @@
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Test Group Name</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
+                  <hidden-innovation-common-form-field
+                    label='Test Group Name'
+                    controlPath='name'
+                  ></hidden-innovation-common-form-field>
                 </div>
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
                   <mat-form-field class='w-100' appearance='fill'>
                     <mat-label>Category</mat-label>
-                    <mat-select>
-                      <mat-option value='cardio'>Cardio</mat-option>
-                      <mat-option value='strength'>Strength</mat-option>
-                      <mat-option value='function'>Function</mat-option>
+                    <mat-select formControlName='category'>
+                      <mat-option [value]='"NONE"'>None</mat-option>
+                      <mat-option [value]=type
+                                  *ngFor='let type of testCatTypeIte'>{{type  | replaceUnderscore | titlecase}}</mat-option>
                     </mat-select>
+                    <mat-error>
+                      <ng-template
+                        [ngIf]='((testGroup.controls.category.touch$ | async) || (testGroup.controls.category.dirty$ | async)) && (testGroup.controls.category.errors$ | async)'
+                        let-error>
+                        <hidden-innovation-form-field-errors
+                          label='Category'
+                          [error]='error'
+                        ></hidden-innovation-form-field-errors>
+                      </ng-template>
+                    </mat-error>
                   </mat-form-field>
                 </div>
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
                   <mat-form-field class='w-100'>
-                    <mat-label>Description</mat-label>
-                    <textarea matInput></textarea>
+                    <mat-label>Sub Category</mat-label>
+                    <input
+                      autocomplete='no'
+                      #input
+                      (keyup)='getTags(input.value)'
+                      (focusin)='getTags(input.value)'
+                      type='text' matInput formControlName='subCategory' [matAutocomplete]='auto'>
+                    <mat-autocomplete #auto='matAutocomplete' [displayWith]='displayFn'>
+                      <ng-template [ngIf]='(tagsStore.isLoading$ | async)' [ngIfElse]='exElse'>
+                        <mat-option disabled>
+                          <div class='w-100 d-flex align-items-center justify-content-center'>
+                            <mat-spinner [diameter]='18'></mat-spinner>
+                          </div>
+                        </mat-option>
+                      </ng-template>
+                      <ng-template #exElse>
+                        <ng-template [ngIf]='(tagsStore.count$ | async)' [ngIfElse]='exCountElse'>
+                          <ng-template ngFor [ngForOf]='(tagsStore.tags$ | async)' let-tag>
+                            <mat-option *ngIf='isExistingTag(tag)' [value]='tag'>
+                              {{tag.name}}
+                            </mat-option>
+                          </ng-template>
+                        </ng-template>
+                        <ng-template #exCountElse>
+                          <mat-option disabled>No Results Found</mat-option>
+                        </ng-template>
+                      </ng-template>
+                      <mat-option *ngFor='let option of (tagsStore.tags$) | async' [value]='option'>
+                        {{option.name}}
+                      </mat-option>
+                    </mat-autocomplete>
                   </mat-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <hidden-innovation-common-form-field-textarea
+                    [label]='constantDataService.FIELD_NAME.DESC | titlecase'
+                    controlPath='description'
+                  ></hidden-innovation-common-form-field-textarea>
                 </div>
               </div>
             </div>
@@ -68,22 +116,48 @@
               </div>
               <div class='row mb-3'>
                 <div class='col-12'>
+                  <p class='text-muted mb-2'>Video File</p>
+                  <div class='d-flex align-items-center'>
+                    <hidden-innovation-common-form-field-video
+                      controlPath='videoId'
+                      [parentCtrl]='testGroup.controls.videoId'
+                      (emitVideoCtrlData)='testGroup.controls.videoId?.setValue($event)'
+                      (emitRemoveVideo)='testGroup.controls.videoId?.reset($event)'
+                    ></hidden-innovation-common-form-field-video>
+                    <div class='ml-2'>
+                      <mat-hint>
+                        <small>({{constantDataService.FIZE_SIZE_DATA.videoFormatMessage}})</small>
+                      </mat-hint>
+                      <br>
+                      <mat-hint>
+                        <small>({{constantDataService.FIZE_SIZE_DATA.videoRatioMessage}})</small>
+                      </mat-hint>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class='row mb-3'>
+                <div class='col-12'>
                   <p class='text-muted mb-2'>Thumbnail</p>
-                  <button
-                    mat-stroked-button
-                    color='primary' type='submit'>
-                    Upload
-                  </button>
+                  <hidden-innovation-common-form-field-image
+                    controlPath='thumbnailId'
+                    [aspectRatio]='aspectRatio.STANDARD'
+                    [parentCtrl]='testGroup.controls.thumbnailId'
+                    (emitImageCtrlData)='testGroup.controls.thumbnailId?.setValue($event)'
+                    (emitRemoveImage)='testGroup.controls.thumbnailId?.reset($event)'
+                  ></hidden-innovation-common-form-field-image>
                 </div>
               </div>
               <div class='row mb-4'>
                 <div class='col-12'>
                   <p class='text-muted mb-2'>Poster</p>
-                  <button
-                    mat-stroked-button
-                    color='primary' type='submit'>
-                    Upload
-                  </button>
+                  <hidden-innovation-common-form-field-image
+                    controlPath='imageId'
+                    [aspectRatio]='aspectRatio.CUBE'
+                    [parentCtrl]='testGroup.controls.imageId'
+                    (emitImageCtrlData)='testGroup.controls.imageId?.setValue($event)'
+                    (emitRemoveImage)='testGroup.controls.imageId?.reset($event)'
+                  ></hidden-innovation-common-form-field-image>
                 </div>
               </div>
             </div>
@@ -91,14 +165,14 @@
         </mat-card>
       </div>
       <div class='col-lg-6 col-12'>
-        <mat-card>
+        <mat-card class='mb-2'>
           <mat-card-title>
             <h3 class='mat-h3 mb-0 font-sf-pro'>Test Options</h3>
           </mat-card-title>
           <mat-divider></mat-divider>
           <mat-card-content>
-            <mat-card class='mat-elevation-z3 p-2 mb-3' [ngClass]='{"mt-4" : isFirst, "mb-0": isLast }'
-                      *ngFor='let test of selection.selected; first as isFirst; last as isLast'>
+            <mat-card class='mat-elevation-z3 p-3 mb-3' [ngClass]='{"mt-4" : isFirst, "mb-0": isLast }'
+                      *ngFor='let test of (store.selectedTests$ | async); first as isFirst; last as isLast'>
               <h4 class='mat-h4 mb-0 font-weight-bold'>{{test.name || '--'}}</h4>
               <h5
                 class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>{{(test.category | titlecase) || '--'}}</h5>
@@ -114,6 +188,7 @@
             </button>
           </mat-card-actions>
         </mat-card>
+        <mat-hint><small>{{formValidationService.testSelectionValidationMessage.minLength}}</small></mat-hint>
       </div>
     </div>
   </div>
