--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -72,22 +72,10 @@
                   <span>
                    Lessons
                   </span>
-                        <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3' >
-                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
-                          </button>
-<!--                          <mat-menu #typeMenu='matMenu'>-->
-<!--                            <mat-selection-list color='primary'-->
-<!--                                                [multiple]='true' class='pt-0'>-->
-<!--                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>-->
-<!--                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>-->
-<!--                              </mat-list-option>-->
-<!--                            </mat-selection-list>-->
-<!--                          </mat-menu>-->
-                        </div>
+
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
+                    <td mat-cell *matCellDef='let element'> {{((element.lessons) || '--')}} </td>
                   </ng-container>
                   <ng-container matColumnDef='tests'>
                     <th mat-header-cell
@@ -96,22 +84,10 @@
                   <span>
                   Tests
                   </span>
-                        <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3' >
-                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
-                          </button>
-                          <!--                          <mat-menu #typeMenu='matMenu'>-->
-                          <!--                            <mat-selection-list color='primary'-->
-                          <!--                                                [multiple]='true' class='pt-0'>-->
-                          <!--                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>-->
-                          <!--                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>-->
-                          <!--                              </mat-list-option>-->
-                          <!--                            </mat-selection-list>-->
-                          <!--                          </mat-menu>-->
-                        </div>
+
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
+                    <td mat-cell *matCellDef='let element'> {{((element.tests) || '--')}} </td>
                   </ng-container>
                   <ng-container matColumnDef='status'>
                     <th mat-header-cell
