--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -241,5 +241,5 @@
 </div>
 <div mat-dialog-actions align='end'>
   <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
-  <button mat-flat-button color='primary' (click)='matDialogRef.close(selectedTests)'>Save</button>
+  <button mat-flat-button color='primary' (click)='saveSelectedTests()'>Save</button>
 </div>
