--- a/libs/test-group/test-group-listing/src/lib/test-group-listing.component.html
+++ b/libs/test-group/test-group-listing/src/lib/test-group-listing.component.html
@@ -129,8 +129,8 @@
                     </th>
                     <td mat-cell *matCellDef='let element'>
                       <hidden-innovation-common-data-field-status
-                        [chipType]='element.is_visible ? statusChipType.SUCCESS : statusChipType.WARNING'
-                        [text]='((element.is_visible ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
+                        [chipType]='element.isVisible ? statusChipType.SUCCESS : statusChipType.WARNING'
+                        [text]='((element.isVisible ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
                       ></hidden-innovation-common-data-field-status>
                     </td>
                   </ng-container>
@@ -143,15 +143,15 @@
                         <mat-icon>more_vert</mat-icon>
                       </button>
                       <mat-menu #testListMenu='matMenu'>
-                        <button mat-menu-item>
+                        <button mat-menu-item [routerLink]='["/tests-group", "edit", row.id]'>
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
-                        <button mat-menu-item>
-                          <mat-icon>{{row.is_visible ? "block" : "check_circle_outline"}}</mat-icon>
-                          <span>{{(row.is_visible ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
+                        <button mat-menu-item (click)='store.toggleActive(row.id, row.isVisible)'>
+                          <mat-icon>{{row.isVisible ? "block" : "check_circle_outline"}}</mat-icon>
+                          <span>{{(row.isVisible ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
                         </button>
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)='deleteTestGroup(row.id)'>
                           <mat-icon>delete</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
                         </button>
@@ -160,7 +160,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' ></tr>
                 </table>
               </div>
             </div>
