--- a/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
+++ b/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
@@ -1,14 +1,12 @@
 <div mat-dialog-title>
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
-      ADD QUESTIONNAIREs OPTIONS TO GROUP</h4>
+      ADD QUESTIONNAIRE OPTIONS TO GROUP</h4>
     <button mat-icon-button mat-dialog-close>
       <mat-icon>close</mat-icon>
     </button>
   </div>
 </div>
-
-
 <div class='container-fluid p-0'>
   <div class='row'>
     <div class='col-3'>
