--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class='col d-flex align-items-center justify-content-end'>
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
-        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/packs", "create"]' >
+        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/packs", "create"]'>
           <mat-icon class='mr-2'>add</mat-icon>
           {{"Add Pack"}}
         </button>
@@ -25,7 +25,7 @@
           <div class='container-fluid p-0'>
             <div class='row'>
               <div class='col-12'>
-                <table mat-table [dataSource]='packs' class='w-100'>
+                <table mat-table [dataSource]='packs' class='w-100' [trackBy]='trackById'>
 
                   <ng-container matColumnDef='id'>
                     <th mat-header-cell *matHeaderCellDef>ID</th>
@@ -33,36 +33,26 @@
                   </ng-container>
                   <ng-container matColumnDef='name'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                   Name
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <mat-icon
-                            style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
-                          </button>
-                        </div>
-                      </div>
+                      <hidden-innovation-sorting-header-name
+                        [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                        [ctrlEnabled]='filters.controls.nameSort?.enabled'
+                        [ctrlValue]='filters.controls.nameSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("nameSort")'
+                      ></hidden-innovation-sorting-header-name>
                     </th>
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='updated_at'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    Date Added
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon
-                              style='font-size: 20px;'>{{true ? "arrow_upward" : "arrow_downward"}}</mat-icon>
-                          </button>
-                        </div>
-                      </div>
-
+                      <hidden-innovation-sorting-header-date
+                        [title]='constantDataService.FIELD_NAME.DATE_ADDED | titlecase'
+                        [ctrlEnabled]='filters.controls.dateSort?.enabled'
+                        [ctrlValue]='filters.controls.dateSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("dateSort")'
+                      ></hidden-innovation-sorting-header-date>
                     </th>
                     <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
                   </ng-container>
@@ -70,10 +60,9 @@
                     <th mat-header-cell
                         *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                   Lessons
-                  </span>
-
+                        <span>
+                         Lessons
+                        </span>
                       </div>
                     </th>
                     <td mat-cell *matCellDef='let element'> {{((element.lessons) || '--')}} </td>
@@ -82,10 +71,9 @@
                     <th mat-header-cell
                         *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                  Tests
-                  </span>
-
+                        <span>
+                        Tests
+                        </span>
                       </div>
                     </th>
                     <td mat-cell *matCellDef='let element'> {{((element.tests) || '--')}} </td>
@@ -94,9 +82,9 @@
                     <th mat-header-cell
                         *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.STATUS | titlecase}}
-                  </span>
+                        <span>
+                          {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                        </span>
                         <div class='d-flex align-items-center'>
                           <button mat-icon-button class='mr-3'
                                   color='{{filters.controls.published?.value ? "primary" : ""}}'
@@ -156,10 +144,29 @@
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
                   <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
                 </table>
-
               </div>
             </div>
-
+            <ng-template [ngIf]='store.isLoading$ | async' [ngIfElse]='noDataElse'></ng-template>
+            <ng-template #noDataElse>
+              <div class='row'>
+                <div class='col-12 d-flex align-items-center justify-content-center'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+                </div>
+              </div>
+            </ng-template>
+            <div class='row mt-2'>
+              <div class='col'></div>
+              <div class='col-6'>
+                <mat-paginator
+                  [disabled]='store.isLoading$ | async'
+                  [pageSize]='pageSize'
+                  [length]='store.count$ | async'
+                  [pageIndex]='paginatorIndex'
+                  [pageSizeOptions]='pageSizeOptions'
+                  (page)='pageEvent = $event; onPaginateChange($event)'
+                ></mat-paginator>
+              </div>
+            </div>
           </div>
         </mat-card>
       </div>
