feat(OH-634-pack-create): Add test-group, questionnaire, lesson selectors and services along with pack form logic

--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
-      ADD TEST OPTIONS TO GROUP</h4>
+      ADD TEST</h4>
     <button mat-icon-button (click)='closeDialog()'>
       <mat-icon>close</mat-icon>
     </button>
