--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -1,4 +1,4 @@
-<div class='p-4'>
+<form class='p-4' [formGroup]='packForm'>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
@@ -9,6 +9,7 @@
           Cancel
         </button>
         <button
+          (click)='submit()'
           mat-flat-button
           class='ml-3'
           color='primary' type='submit'>
@@ -31,53 +32,57 @@
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Pack Name</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
+                  <hidden-innovation-common-form-field
+                    label='Pack Name'
+                    controlPath='name'
+                  ></hidden-innovation-common-form-field>
                 </div>
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Description</mat-label>
-                    <textarea matInput></textarea>
-                  </mat-form-field>
+                  <hidden-innovation-common-form-field-textarea
+                    [label]='constantDataService.FIELD_NAME.DESC | titlecase'
+                    controlPath='description'
+                  ></hidden-innovation-common-form-field-textarea>
                 </div>
               </div>
             </div>
             <div class='container-fluid p-0 '>
               <div class='row mb-3'>
                 <div class='col-12'>
-                  <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
                     Media</h5>
                 </div>
               </div>
               <div class='row mb-3'>
                 <div class='col-12'>
                   <p class='text-muted mb-2'>Thumbnail</p>
-                  <button
-                    mat-stroked-button
-                    color='primary' type='submit'>
-                    Upload
-                  </button>
+                  <hidden-innovation-common-form-field-image
+                    controlPath='thumbnailId'
+                    [aspectRatio]='aspectRatio.STANDARD'
+                    [parentCtrl]='packForm.controls.thumbnailId'
+                    (emitImageCtrlData)='packForm.controls.thumbnailId?.setValue($event)'
+                    (emitRemoveImage)='packForm.controls.thumbnailId?.reset($event)'
+                  ></hidden-innovation-common-form-field-image>
                 </div>
               </div>
               <div class='row mb-4'>
                 <div class='col-12'>
                   <p class='text-muted mb-2'>Poster</p>
-                  <button
-                    mat-stroked-button
-                    color='primary' type='submit'>
-                    Upload
-                  </button>
+                  <hidden-innovation-common-form-field-image
+                    controlPath='posterId'
+                    [aspectRatio]='aspectRatio.CUBE'
+                    [parentCtrl]='packForm.controls.posterId'
+                    (emitImageCtrlData)='packForm.controls.posterId?.setValue($event)'
+                    (emitRemoveImage)='packForm.controls.posterId?.reset($event)'
+                  ></hidden-innovation-common-form-field-image>
                 </div>
               </div>
             </div>
             <div class='container-fluid p-0 '>
               <div class='row mb-3'>
                 <div class='col-12'>
-                  <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
                     Resources</h5>
                 </div>
               </div>
@@ -86,7 +91,7 @@
                   <p class='text-muted mb-2'>PDFs and Images</p>
                   <button
                     mat-stroked-button
-                    color='primary' type='submit'>
+                    color='primary' type='button'>
                     Upload
                   </button>
                 </div>
@@ -96,7 +101,7 @@
                   <p class='text-muted mb-2'>URLs</p>
                   <button
                     mat-stroked-button
-                    color='primary' type='submit'>
+                    color='primary' type='button'>
                     Upload
                   </button>
                 </div>
@@ -112,58 +117,106 @@
             <button
               mat-flat-button
               class='ml-3'
-              [matMenuTriggerFor]="menuPack"
+              [matMenuTriggerFor]='menuPack'
               color='primary' type='submit'>
               Add
             </button>
-            <mat-menu #menuPack="matMenu">
-              <button mat-menu-item (click)='openTestSelector()' >
+            <mat-menu #menuPack='matMenu'>
+              <button mat-menu-item (click)='openTestSelector()'>
                 <span>Test</span>
               </button>
-              <button mat-menu-item (click)='openTestGroupDialog()' >
+              <button mat-menu-item (click)='openTestGroupDialog()'>
                 <span>Test Group</span>
               </button>
-              <button mat-menu-item (click)='openCreateLessonDialog()'  >
+              <button mat-menu-item (click)='openCreateLessonDialog()'>
                 <span>Lessons</span>
               </button>
-              <button mat-menu-item (click)='openQuestionnaireDialog()' >
+              <button mat-menu-item (click)='openQuestionnaireDialog()'>
                 <span>Questionnaire</span>
               </button>
             </mat-menu>
           </mat-card-title>
           <mat-divider></mat-divider>
-          <mat-card-content >
-
-              <div class='pt-3' cdkDrag>
-                <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
-                  <div class='d-flex align-items-center justify-content-between'>
-                    <h4 class='mat-h4 mb-0 font-weight-bold'>Introduction to high performance training</h4>
-                    <div>
-                      <button type='button' mat-icon-button [matMenuTriggerFor]='menu'>
-                        <mat-icon>more_vert</mat-icon>
-                      </button>
-                      <mat-menu #menu='matMenu'>
-                        <button type='button'  mat-menu-item>
-                          <mat-icon>create</mat-icon>
-                          <span>Edit</span>
-                        </button>
-                        <button type='button'  mat-menu-item>
-                          <mat-icon>delete</mat-icon>
-                          <span>Delete</span>
-                        </button>
-                      </mat-menu>
-                    </div>
-                  </div>
-                  <h5
-                    class='mat-h5 d-flex align-items-center text-color__primary mb-0 mr-2 type-icon font-calibri'>
-                    <mat-icon class='d-flex align-items-center'  aria-hidden="false" aria-label="fiber manual record">fiber_manual_record</mat-icon>
-                    <span>Lesson</span>
-                  </h5>
-                </mat-card>
-              </div>
-
+          <mat-card-content class='content-container'>
+            <div class='d-flex flex-column'>
+              <h5 class='mat-h5 text-uppercase mb-0 mt-2 font-calibri' style='color: #FFC107;'>
+                Tests</h5>
+              <ng-template [ngIf]='uiStore.testsExists$ | async' [ngIfElse]='testLengthElse'>
+                <hidden-innovation-pack-content-card
+                  class='mb-3'
+                  *ngFor='let test of (uiStore.selectedTests$ | async); first as isFirst; last as isLast; trackBy: trackTestByFn'
+                  [ngClass]='{"mt-2" : isFirst, "mb-0": isLast }'
+                  [name]='test.name'
+                  [category]='test.category'
+                  (emitDeleteEvent)='deleteSelectedTest(test)'
+                ></hidden-innovation-pack-content-card>
+              </ng-template>
+              <ng-template #testLengthElse>
+                <div class='d-flex align-items-center justify-content-center w-100'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri text-muted'>--</h4>
+                </div>
+              </ng-template>
+            </div>
+            <div class='d-flex flex-column'>
+              <h5 class='mat-h5 text-uppercase mb-0 mt-2 font-calibri' style='color: #FFC107;'>
+                Test Groups</h5>
+              <ng-template [ngIf]='uiStore.testGroupsExists$ | async' [ngIfElse]='testGroupLengthElse'>
+                <hidden-innovation-pack-content-card
+                  class='mb-3'
+                  *ngFor='let testGroup of (uiStore.selectedTestGroups$ | async); first as isFirst; last as isLast; trackBy: trackTestGroupByFn'
+                  [ngClass]='{"mt-2" : isFirst, "mb-0": isLast }'
+                  [name]='testGroup.name'
+                  [category]='testGroup.category'
+                  (emitDeleteEvent)='deleteSelectedTestGroup(testGroup)'
+                ></hidden-innovation-pack-content-card>
+              </ng-template>
+              <ng-template #testGroupLengthElse>
+                <div class='d-flex align-items-center justify-content-center w-100'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri text-muted'>--</h4>
+                </div>
+              </ng-template>
+            </div>
+            <div class='d-flex flex-column'>
+              <h5 class='mat-h5 text-uppercase mb-0 mt-2 font-calibri' style='color: #4DB6AC;'>
+                Questionnaires</h5>
+              <ng-template [ngIf]='uiStore.questionnairesExists$ | async' [ngIfElse]='questionnairesLengthElse'>
+                <hidden-innovation-pack-content-card
+                  class='mb-3'
+                  *ngFor='let questionnaire of (uiStore.selectedQuestionnaires$ | async); first as isFirst; last as isLast; trackBy: trackQuestionnaireGroupByFn'
+                  [ngClass]='{"mt-2" : isFirst, "mb-0": isLast }'
+                  [name]='questionnaire.name'
+                  category='--'
+                  (emitDeleteEvent)='deleteSelectedQuestionnaire(questionnaire)'
+                ></hidden-innovation-pack-content-card>
+              </ng-template>
+              <ng-template #questionnairesLengthElse>
+                <div class='d-flex align-items-center justify-content-center w-100'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri text-muted'>--</h4>
+                </div>
+              </ng-template>
+            </div>
+            <div class='d-flex flex-column'>
+              <h5 class='mat-h5 text-uppercase mb-0 mt-2 font-calibri' style='color: #6394E2;'>
+                Lessons</h5>
+              <ng-template [ngIf]='uiStore.lessonsExists$ | async' [ngIfElse]='lessonLengthElse'>
+                <hidden-innovation-pack-content-card
+                  class='mb-3'
+                  *ngFor='let lesson of (uiStore.selectedLessons$ | async); first as isFirst; last as isLast; trackBy: trackLessonGroupByFn'
+                  [ngClass]='{"mt-2" : isFirst, "mb-0": isLast }'
+                  [name]='lesson.name'
+                  [category]='lesson.category'
+                  (emitDeleteEvent)='deleteSelectedLesson(lesson)'
+                ></hidden-innovation-pack-content-card>
+              </ng-template>
+              <ng-template #lessonLengthElse>
+                <div class='d-flex align-items-center justify-content-center w-100'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri text-muted'>--</h4>
+                </div>
+              </ng-template>
+            </div>
           </mat-card-content>
-          </mat-card>
+        </mat-card>
       </div>
     </div>
   </div>
+</form>
