--- a/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
+++ b/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
-      ADD QUESTIONNAIRE OPTIONS TO GROUP</h4>
+      ADD QUESTIONNAIRE</h4>
     <button mat-icon-button mat-dialog-close>
       <mat-icon>close</mat-icon>
     </button>
@@ -12,29 +12,193 @@
     <div class='col-3'>
       <mat-form-field class='w-100'>
         <mat-label>Search</mat-label>
-        <input matInput>
-        <button mat-icon-button matSuffix *ngIf='false'>
+        <input matInput autocomplete='off' [formControl]='filters.controls.search'>
+        <button mat-icon-button matSuffix *ngIf='filters.controls.search.value'
+                (click)='filters.controls.search.setValue("")'>
           <mat-icon style='font-size: 14px'>close</mat-icon>
         </button>
       </mat-form-field>
     </div>
     <div class='col d-flex align-items-center justify-content-end'>
-      <mat-spinner class='mr-2' [diameter]='20' *ngIf='true'></mat-spinner>
+      <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+    </div>
+  </div>
+  <div class='row'>
+    <div class='col-12'>
+      <div mat-dialog-content>
+        <mat-card class='p-0'>
+          <div class='container-fluid p-0'>
+            <div class='row'>
+              <div class='col-12'>
+                <table mat-table [dataSource]='questionnaires' class='w-100'>
+
+                  <ng-container matColumnDef='select'>
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                    <td mat-cell *matCellDef='let test'>
+                      <mat-checkbox
+                        color='primary'
+                        (click)='$event.stopPropagation()'
+                        (change)='$event ? addToList(test) : null'
+                        [checked]='isSelected(test)'>
+                      </mat-checkbox>
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef='id'>
+                    <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'> {{element.id || '--'}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef='name'>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <hidden-innovation-sorting-header-name
+                        [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                        [ctrlEnabled]='filters.controls.nameSort?.enabled'
+                        [ctrlValue]='filters.controls.nameSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("nameSort")'
+                      ></hidden-innovation-sorting-header-name>
+                    </th>
+                    <td mat-cell *matCellDef='let element'
+                        [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef='date_added'>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <hidden-innovation-sorting-header-date
+                        [title]='constantDataService.FIELD_NAME.DATE_ADDED | titlecase'
+                        [ctrlEnabled]='filters.controls.dateSort?.enabled'
+                        [ctrlValue]='filters.controls.dateSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("dateSort")'
+                      ></hidden-innovation-sorting-header-date>
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{(element.created_at | date: 'shortDate') || '--'}}</td>
+                  </ng-container>
+
+                  <ng-container matColumnDef='questions'>
+                    <th mat-header-cell
+                        *matHeaderCellDef> {{constantDataService.FIELD_NAME.QUESTIONS | titlecase}} </th>
+                    <td mat-cell *matCellDef='let element'> {{(element.questions?.length || 0)}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef='scoring'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.SCORING | titlecase}}
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='scoringMenu'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{(filters.controls.scoring?.enabled$ | async) ? "primary" : ""}}'>
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <mat-menu #scoringMenu='matMenu'>
+                            <mat-selection-list color='primary'
+                                                (selectionChange)='updateFilterChange($event, filters.controls.scoring)'
+                                                [multiple]='false' class='pt-0'>
+                              <mat-list-option [value]='"TRUE"'>
+                                Enabled
+                              </mat-list-option>
+                              <mat-list-option [value]='"FALSE"'>
+                                Disabled
+                              </mat-list-option>
+                              <mat-list-option [value]='undefined'>
+                                Clear
+                              </mat-list-option>
+                            </mat-selection-list>
+                          </mat-menu>
+                        </div>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'>
+                      <hidden-innovation-common-data-field-status
+                        *ngIf='!!element.isScoring'
+                        [chipType]='statusChipType.SUCCESS'
+                        [text]='"enabled" | titlecase'
+                      ></hidden-innovation-common-data-field-status>
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef='status'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='statusMenu'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filters.controls.active?.value ? "primary" : ""}}'>
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <mat-menu #statusMenu='matMenu'>
+
+                            <mat-selection-list color='primary'
+                                                (selectionChange)='updateFilterChange($event, filters.controls.active)'
+                                                [multiple]='false' class='pt-0'>
+                              <mat-list-option [value]='"TRUE"'>
+                                {{userStatusEnum.ACTIVE | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='"FALSE"'>
+                                {{userStatusEnum.INACTIVE | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='undefined'>
+                                Clear
+                              </mat-list-option>
+                            </mat-selection-list>
+                          </mat-menu>
+                        </div>
+                      </div>
+
+                    </th>
+                    <td mat-cell *matCellDef='let element'>
+                      <hidden-innovation-common-data-field-status
+                        [chipType]='element.isActive ? statusChipType.SUCCESS : statusChipType.WARNING'
+                        [text]='((element.isActive ? userStatusEnum.ACTIVE : userStatusEnum.INACTIVE)  | titlecase)'
+                      ></hidden-innovation-common-data-field-status>
+                    </td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' (click)='addToList(row)'
+                      class='row-react'></tr>
+                </table>
+              </div>
+            </div>
+            <ng-template [ngIf]='store.isLoading$ | async' [ngIfElse]='noDataElse'></ng-template>
+            <ng-template #noDataElse>
+              <div class='row'>
+                <div class='col-12 d-flex align-items-center justify-content-center'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+                </div>
+              </div>
+            </ng-template>
+          </div>
+        </mat-card>
+      </div>
     </div>
   </div>
   <div class='row'>
     <div class='col-12'>
       <mat-card class='p-0'>
         <mat-paginator
-          [pageSize]='pageSize' [length]='5' [pageIndex]='paginatorIndex'
-          [pageSizeOptions]='pageSizeOptions'></mat-paginator>
+          [disabled]='store.isLoading$ | async'
+          [pageSize]='pageSize'
+          [length]='store.count$ | async'
+          [pageIndex]='paginatorIndex'
+          [pageSizeOptions]='pageSizeOptions'
+          (page)='pageEvent = $event; onPaginateChange($event)'
+        ></mat-paginator>
       </mat-card>
     </div>
   </div>
 </div>
-
-
 <div mat-dialog-actions align='end'>
-  <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
-  <button mat-flat-button color='primary'>Save</button>
+  <button mat-button (click)='closeDialog()' cdkFocusInitial>Cancel</button>
+  <button mat-flat-button color='primary' (click)='saveSelectedQuestionnaires()'>Save</button>
 </div>
