--- a/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
+++ b/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
@@ -1,8 +1,8 @@
 <div mat-dialog-title>
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
-      ADD TEST GROUP OPTIONS TO GROUP</h4>
-    <button mat-icon-button mat-dialog-close>
+      ADD TEST GROUP</h4>
+    <button mat-icon-button (click)='closeDialog()'>
       <mat-icon>close</mat-icon>
     </button>
   </div>
@@ -12,39 +12,35 @@
     <div class='col-3'>
       <mat-form-field class='w-100'>
         <mat-label>Search</mat-label>
-        <input matInput>
-        <button mat-icon-button matSuffix *ngIf='false'>
+        <input matInput autocomplete='off' [formControl]='filters.controls.search'>
+        <button mat-icon-button matSuffix *ngIf='filters.controls.search.value'
+                (click)='filters.controls.search.setValue("")'>
           <mat-icon style='font-size: 14px'>close</mat-icon>
         </button>
       </mat-form-field>
     </div>
     <div class='col d-flex align-items-center justify-content-end'>
-      <mat-spinner class='mr-2' [diameter]='20' *ngIf='true'></mat-spinner>
+      <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
     </div>
   </div>
   <div class='row'>
     <div class='col-12'>
       <div mat-dialog-content>
-        <mat-card class='p-0 mt-2'>
+        <mat-card class='p-0'>
           <div class='container-fluid p-0'>
             <div class='row'>
               <div class='col-12'>
-                <table mat-table [dataSource]='testGroup' class='w-100'>
+                <table mat-table [dataSource]='testGroup' [trackBy]='trackById' class='w-100'>
+
                   <ng-container matColumnDef='select'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <mat-checkbox
-                        color='primary'
-                        (change)='$event ? masterToggle() : null'
-                        [checked]='selection.hasValue() && isAllSelected()'
-                        [indeterminate]='selection.hasValue() && !isAllSelected()'>
-                      </mat-checkbox>
                     </th>
-                    <td mat-cell *matCellDef='let row'>
+                    <td mat-cell *matCellDef='let test'>
                       <mat-checkbox
                         color='primary'
                         (click)='$event.stopPropagation()'
-                        (change)='$event ? selection.toggle(row) : null'
-                        [checked]='selection.isSelected(row)'>
+                        (change)='$event ? addToList(test) : null'
+                        [checked]='isSelected(test)'>
                       </mat-checkbox>
                     </td>
                   </ng-container>
@@ -56,18 +52,13 @@
 
                   <ng-container matColumnDef='name'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.NAME | titlecase}}
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <mat-icon
-                            style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
-                          </button>
-                        </div>
-                      </div>
+                      <hidden-innovation-sorting-header-name
+                        [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                        [ctrlEnabled]='filters.controls.nameSort?.enabled'
+                        [ctrlValue]='filters.controls.nameSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("nameSort")'
+                      ></hidden-innovation-sorting-header-name>
                     </th>
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
@@ -75,18 +66,13 @@
 
                   <ng-container matColumnDef='updated_at'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase}}
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon
-                              style='font-size: 20px;'>{{true ? "arrow_upward" : "arrow_downward"}}</mat-icon>
-                          </button>
-                        </div>
-                      </div>
-
+                      <hidden-innovation-sorting-header-date
+                        [title]='constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase'
+                        [ctrlEnabled]='filters.controls.dateSort?.enabled'
+                        [ctrlValue]='filters.controls.dateSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("dateSort")'
+                      ></hidden-innovation-sorting-header-date>
                     </th>
                     <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
                   </ng-container>
@@ -95,22 +81,24 @@
                     <th mat-header-cell
                         *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
-                  </span>
-<!--                        <div class='d-flex align-items-center'>-->
-<!--                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'>-->
-<!--                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>-->
-<!--                          </button>-->
-<!--                          <mat-menu #typeMenu='matMenu'>-->
-<!--                            <mat-selection-list color='primary'-->
-<!--                                                [multiple]='true' class='pt-0'>-->
-<!--                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>-->
-<!--                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>-->
-<!--                              </mat-list-option>-->
-<!--                            </mat-selection-list>-->
-<!--                          </mat-menu>-->
-<!--                        </div>-->
+                        <span>
+                          {{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
+                        </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filters.controls.category?.value ? "primary" : ""}}'>
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <mat-menu #typeMenu='matMenu'>
+                            <mat-selection-list color='primary' (selectionChange)='categoryFilterChange($event)'
+                                                [multiple]='true' class='pt-0'>
+                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>
+                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>
+                              </mat-list-option>
+                            </mat-selection-list>
+                          </mat-menu>
+                        </div>
                       </div>
                     </th>
                     <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
@@ -120,7 +108,7 @@
                     <th mat-header-cell *matHeaderCellDef>
                       {{constantDataService.FIELD_NAME.OPTIONS | titlecase}}
                     </th>
-                    <td mat-cell *matCellDef='let element'>{{element.options ?? '--'}}</td>
+                    <td mat-cell *matCellDef='let element'>{{element.tests?.length ?? 0}}</td>
                   </ng-container>
 
                   <ng-container matColumnDef='status'>
@@ -131,17 +119,25 @@
                     {{constantDataService.FIELD_NAME.STATUS | titlecase}}
                   </span>
                         <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='statusMenu'>
+                          <button mat-icon-button class='mr-3'
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'
+                                  [matMenuTriggerFor]='statusMenu'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
                           <mat-menu #statusMenu='matMenu'>
                             <mat-selection-list color='primary'
+                                                (selectionChange)='updateFilterChange($event, filters.controls.published)'
                                                 [multiple]='false' class='pt-0'>
-                              <mat-list-option [value]='true'>
-                                <h6 class='mat-h6'>{{publishStatusEnum.PUBLISHED | titlecase}}</h6>
+                              <mat-list-option [value]='"TRUE"'>
+                                {{publishStatusEnum.PUBLISHED | titlecase}}
                               </mat-list-option>
-                              <mat-list-option [value]='false'>
-                                <h6 class='mat-h6'>{{publishStatusEnum.UNPUBLISHED | titlecase}}</h6>
+                              <mat-list-option [value]='"FALSE"'>
+                                {{publishStatusEnum.UNPUBLISHED | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='undefined'>
+                                Clear
                               </mat-list-option>
                             </mat-selection-list>
                           </mat-menu>
@@ -150,41 +146,26 @@
                     </th>
                     <td mat-cell *matCellDef='let element'>
                       <hidden-innovation-common-data-field-status
-                        [chipType]='element.status ? statusChipType.SUCCESS : statusChipType.WARNING'
-                        [text]='((element.status ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
+                        [chipType]='element.isVisible ? statusChipType.SUCCESS : statusChipType.WARNING'
+                        [text]='((element.isVisible ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
                       ></hidden-innovation-common-data-field-status>
                     </td>
                   </ng-container>
 
-                  <ng-container matColumnDef='action'>
-                    <th mat-header-cell *matHeaderCellDef
-                        [width]='30'></th>
-                    <td mat-cell *matCellDef='let row'>
-                      <button mat-icon-button [matMenuTriggerFor]='testListMenu'>
-                        <mat-icon>more_vert</mat-icon>
-                      </button>
-                      <mat-menu #testListMenu='matMenu'>
-                        <button mat-menu-item>
-                          <mat-icon>create</mat-icon>
-                          <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
-                        </button>
-                        <button mat-menu-item>
-                          <mat-icon>{{row.status ? "block" : "check_circle_outline"}}</mat-icon>
-                          <span>{{(row.status ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
-                        </button>
-                        <button mat-menu-item>
-                          <mat-icon>delete</mat-icon>
-                          <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
-                        </button>
-                      </mat-menu>
-                    </td>
-                  </ng-container>
-
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' (click)='addToList(row)'
+                      class='row-react'></tr>
                 </table>
               </div>
             </div>
+            <ng-template [ngIf]='store.isLoading$ | async' [ngIfElse]='noDataElse'></ng-template>
+            <ng-template #noDataElse>
+              <div class='row'>
+                <div class='col-12 d-flex align-items-center justify-content-center'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+                </div>
+              </div>
+            </ng-template>
           </div>
         </mat-card>
       </div>
@@ -194,14 +175,18 @@
     <div class='col-12'>
       <mat-card class='p-0'>
         <mat-paginator
-          [pageSize]='pageSize' [length]='5' [pageIndex]='paginatorIndex'
-          [pageSizeOptions]='pageSizeOptions'></mat-paginator>
+          [disabled]='store.isLoading$ | async'
+          [pageSize]='pageSize'
+          [length]='store.count$ | async'
+          [pageIndex]='paginatorIndex'
+          [pageSizeOptions]='pageSizeOptions'
+          (page)='pageEvent = $event; onPaginateChange($event)'
+        ></mat-paginator>
       </mat-card>
     </div>
   </div>
 </div>
-
 <div mat-dialog-actions align='end'>
-  <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
-  <button mat-flat-button color='primary'>Save</button>
+  <button mat-button (click)='closeDialog()' cdkFocusInitial>Cancel</button>
+  <button mat-flat-button color='primary' (click)='saveSelectedTestgroups()'>Save</button>
 </div>
